--- a/cura_conf/perfil_cura_15.04.6.ini
+++ b/cura_conf/perfil_cura_15.04.6.ini
@@ -42,7 +42,7 @@ solidarea_speed = 45
 inset0_speed = 25
 insetx_speed = 30
 cool_min_layer_time = 5
-fan_enabled = False
+fan_enabled = True
 skirt_line_count = 2
 skirt_gap = 5
 skirt_minimal_length = 150.0
